Update GPS standby code and modify fixed coordinates in index.html

--- a/Web Server/templates/index.html
+++ b/Web Server/templates/index.html
@@ -92,7 +92,7 @@
     </style>
     <script>
         // Coordenada fija de tu computadora (modifica estos valores según tu ubicación)
-        const miCoordenada = [19.338517687390098, -99.57106386203036]; // Ejemplo: UNAM
+        const miCoordenada = [19.295393822921056, -99.68571637255569];
 
         // Inicializa el mapa centrado en tu computadora
         const map = L.map('map').setView(miCoordenada, 15);
